# fastapi-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.yml  pyproject.toml
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/form/: FormActionMessage.tsx  SubmitButton.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  mediaUrl.ts
frontend/src/pages/: EditPost.tsx  Home.tsx  Login.tsx  NewPost.tsx  PostPage.tsx  Profile.tsx  Register.tsx
src/blog_app/: __init__.py  __main__.py  config.py  logging_config.py  main.py  seed.py
src/blog_app/application/: errors.py  sentinel.py
src/blog_app/application/ports/: file_storage.py  post_repository.py  token_service.py  user_repository.py
src/blog_app/application/use_cases/auth/: get_user.py  login_user.py  refresh_session.py  register_user.py  (+1 more)
src/blog_app/domain/entities/: post.py  user.py
src/blog_app/infrastructure/files/: local_file_storage.py
src/blog_app/infrastructure/persistence/: database.py  models.py  sqlite_migrate.py
src/blog_app/infrastructure/security/: bcrypt_password_hasher.py  jwt_token_service.py
src/blog_app/presentation/: upload_util.py  url_helper.py
src/blog_app/presentation/api/: deps.py
src/blog_app/presentation/middleware/: request_logging.py
src/blog_app/presentation/schemas/: auth.py  post.py
(+10 files in other folders)
